# opencode_sandbox_demo

./: .gitignore  AGENTS.md  Dockerfile  Makefile  PR.md  asdf.md  centralise-plan.md  centralise.md  doo.md  justfile  main.py  plan.md  port-approve.md  port-common.md  port-plan.md  port-quick.md  port-reject.md  port-task.md  pyproject.toml  readme.md  wozplan.md
.mykit/: spec.yml
.opencode/: config.jsonc
.opencode/agents/: coder.md  planner.md
cent/: _IGNORED.md  goal.md
cent/current_behaviour/: approve.md  common.md  model_mapping.md  plan.md  quick.md  task.md
docs/: custom-sandbox.md
opencode/: config.json
opencode/prompts/: coding.md  system.md
opencode/tasks/: init.md  pc.md
scripts/: _common.sh  _utils.sh  approve.sh  build_custom_image.sh  plan.sh  quick.sh  reject.sh  sbx-approve.sh  sbx-do.sh  sbx-quick.sh  task.sh
src/sbx/: sbx.py
src/soc_cli/: common.py  main.py  quick.py
src/soc_cli/commands/: approve.py  plan.py  quick.py  reject.py  task.py
tasks/: custom.md  custom2.md  poop.md  yo.md
