[project]
name = "sandboxed-opencode"
version = "0.1.0"
description = "Convenient runner for opencode in docker sandboxes"
readme = "readme.md"
requires-python = ">=3.13"
package-mode = true
dependencies = [
    "typer>=0.25.0",
]

[project.scripts]
soc = "soc_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/soc_cli"]

[tool.hatch.build.targets.wheel]
packages = ["src/soc_cli"]
